Amélioration des performances et sécurisation des appels concurrents.